fixing scrollbar shift

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,10 @@
   margin: 0;
   scroll-behavior: smooth;
 }
+html{
+
+  scrollbar-gutter: stable;
+}
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
